# tp-2019-2c-418-status-code

./: .gitignore  README.md  build_tp.sh
Ejemplos/cliente/: CMakeCache.txt  CMakeLists.txt  Makefile  cliente  cliente.c  cliente.cbp  cliente.h  cmake_install.cmake
Ejemplos/servidor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  servidor  servidor.c  servidor.cbp  servidor.h
File System/src/SAC-cli/: CMakeLists.txt  fileSystem.c  fuse_example.c  fuse_example.h  instrucciones-prueba.txt  makefile  operaciones.c  operaciones.h  sac_cli.config
File System/src/SAC-cli/_sac_cli/: CMakeLists.txt  fuse_example.c  fuse_example.h  instrucciones-prueba.txt  makefile  operaciones.h  sac-cli
File System/src/SAC-cli/cliente/: CMakeCache.txt  CMakeLists.txt  Makefile  cliente  cliente.c  cliente.cbp  cliente.h  cmake_install.cmake
File System/src/SAC-servidor/: CMakeLists-emi.txt  CMakeLists-rodri.txt  CMakeLists-sac.txt  CMakeLists.txt  fileSystem.c  fileSystem.h  funciones-emi.c  funciones-emi.h  funciones-rodri.c  funciones-rodri.h  funciones.c  funciones.h  main.c  main.h  makefile  sac-server.c  sac-server.h  structs.h
File System/src/SAC-servidor/FileSystem/: CMakeLists.txt  fileSystem.c  fileSystem.h
File System/src/SAC-servidor/tools/: CMakeLists.txt  tools.c  tools.h
Memoria/: CMakeLists.txt  build_memoria.sh
Memoria/src/Muse/: .gitignore  CMakeLists.txt  config  main.c  makefile  muse.c  muse.h
Memoria/src/libMuse/: CMakeLists.txt  README.md  config  libmuse.c  libmuse.h
Memoria/test/: CMakeLists.txt  tests.c
Planificador/: build_planificador.sh
Planificador/src/Suse/: CMakeLists.txt  suse.c  suse.config  suse.h  suseStructures.h
Planificador/src/hilolay/: CMakeLists.txt  library.h
Planificador/src/libSuse/: CMakeLists.txt  libSuse.c  libSuse.h  libSuseStructures.h
SharedLibrary/: CMakeLists.txt  conexiones.c  conexiones.h  configs.c  configs.h  loggers.c  loggers.h  protocolo.c  protocolo.h
altaLibreria/: .gitignore  CMakeLists.txt  connections.c  connections.h  makefile  protocolo.c  protocolo.h  structures.h
altaLibreria/build-dir/: install_manifest.txt
dalibrary/: .cproject  .project  makefile
dalibrary/dalibrary/: functions.c  libmain.h  structures.h
